fix quickstart build